        the ConnegService.
      - Deprecated ClientResource#createRequest(Request) in favor of a
        new createRequest() method.
      - Added Request#isSynchronous() and isAsynchronous() methods as
        convenient shortcuts.
      - Added ClientResource#handleInbound(...) and handleOutbound(...)
        method to factorize even more logic.
    - New features
      - Added a CookieAuthenticator class in the org.restlet.ext.crypto
        extension to provide customizable and secure authentication via
        cookies, in a way that is as compatible as possible with HTTP
        challenge based authentication.
        Based on an initial contribution by Remi Dewitte.
      - Added org.restlet.service.ConnegService to provide a way to 
        control the content negotiation behavior at the application level.
        It offers two mode: strict and flexible (default) by other algorithms
        can be plugged by overriding this class and reusing the Conneg
        subclasses in the engine package. Suggested by David Bordoley.        
      - Improved Restlet annotation value syntax to support alternate 
        variants using '|' and combination of several metadata for a 
        single variant using '+' separator. Also, all metadata are now
        supported, not just media types.
      - Added support for URI query constraints in the value of Restlet
        method annotations such as @Get("form:json?light") or 
        @Get("?level=2"). This allows returning and serializing 
        different representation beans based on those parameters.
    - Bug fixed
      - Fixed potential NPE in the Authenticator when logging authentication 
        failure. Reported by Martin Svensson.
     - Misc
      - Optimized the HeaderReader class beavhior in the engine.
      - Optimized the processing of extra headers and challenge schemes. 
        Contributed by Scott S. McCoy
      
- 2.1 Milestone 5 (06/21/2011)
    - API changes